--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -27,8 +27,8 @@ Deliveria is a *desktop application* that allows a *delivery manager* to *manage
 
 == Getting Started
 .Draft UI mockup
-image::/images/Ui.png[Ui]
-[caption="Figure 1: ",link="/images/Ui.png"]
+image::Ui.png[Ui]
+[caption="Figure 1: ",link="Ui.png"]
 . Ensure you have Java 11 or above installed in your Computer.
 . Download the latest release deliveria.jar https://github.com/AY1920S1-CS2103T-F14-4/main/releases[here].
 . Copy the file to the folder you want to use as the home folder for your Address Book.
