--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -15,7 +15,7 @@ ifdef::env-github[]
 endif::[]
 :repoURL: https://github.com/AY1920S1-CS2103T-F14-4/main
 
-Group Name: `CS2103-F14-4`
+Group Name: `CS2103T-F14-4`
 
 By: `Chee You, Rushagrid Kunthamas, Sam Yong Jek, Song Tianyi, Tan Jun Bang`
 
