--- a/README.adoc
+++ b/README.adoc
@@ -2,6 +2,8 @@
 ifdef::env-github,env-browser[:relfileprefix: docs/]
 
 https://travis-ci.com/AY1920S1-CS2103T-F14-4/main[image:https://travis-ci.com/AY1920S1-CS2103T-F14-4/main.svg?branch=master[Build Status]]
+https://coveralls.io/github/AY1920S1-CS2103T-F14-4?branch=master[image:https://coveralls.io/repos/github/AY1920S1-CS2103T-F14-4/badge.svg?branch=master[Coverage Status]]
+image:https://api.codacy.com/project/badge/Grade/7e4a8637349c4a028a87709e1d573861["Codacy code quality", link="https://www.codacy.com/manual/junnbang/main?utm_source=github.com&utm_medium=referral&utm_content=AY1920S1-CS2103T-F14-4/main&utm_campaign=Badge_Grade"]
 
 ifdef::env-github[]
 image::docs/images/Ui.png[width="600"]
@@ -11,7 +13,8 @@ ifndef::env-github[]
 image::images/Ui.png[width="600"]
 endif::[]
 
-* This is a desktop Address Book application. It has a GUI but most of the user interactions happen using a CLI (Command Line Interface).
+* Deliveria is a *desktop application* that allows a *delivery manager* to *manage and assign delivery tasks* efficiently. While it consists of a _Graphical User Interface_ (GUI) that is user-friendly, Deliveria is *optimized for those who prefer* to work with a _Command Line Interface_ (CLI) which allows fast management of the delivery tasks in an organisation.
+
 * See below for a detailed introduction.
 
 == Site Map
