--- a/README.adoc
+++ b/README.adoc
@@ -2,8 +2,9 @@
 ifdef::env-github,env-browser[:relfileprefix: docs/]
 
 https://travis-ci.com/AY1920S1-CS2103T-F14-4/main[image:https://travis-ci.com/AY1920S1-CS2103T-F14-4/main.svg?branch=master[Build Status]]
-https://coveralls.io/github/AY1920S1-CS2103T-F14-4?branch=master[image:https://coveralls.io/repos/github/AY1920S1-CS2103T-F14-4/badge.svg?branch=master[Coverage Status]]
-image:https://api.codacy.com/project/badge/Grade/7e4a8637349c4a028a87709e1d573861["Codacy code quality", link="https://www.codacy.com/manual/junnbang/main?utm_source=github.com&utm_medium=referral&utm_content=AY1920S1-CS2103T-F14-4/main&utm_campaign=Badge_Grade"]
+https://coveralls.io/github/AY1920S1-CS2103T-F14-4/main?branch=master[image:https://coveralls.io/repos/github/AY1920S1-CS2103T-F14-4/main/badge.svg?branch=add-coverage-code-quality[CoverageStatus]]
+https://www.codacy.com/manual/AY1920S1-CS2103T-F14-4/main?utm_source=github.com&utm_medium=referral&utm_content=AY1920S1-CS2103T-F14-4/main&utm_campaign=Badge_Grade"[image:https://api.codacy.com/project/badge/Grade/c70f6c331d00403aade9c0acf4bfe43f[Codacy Badge]]
+
 
 ifdef::env-github[]
 image::docs/images/Ui.png[width="600"]
