added libraries refernece

--- a/README.adoc
+++ b/README.adoc
@@ -30,7 +30,7 @@ endif::[]
 * The code base is developed based on the `AddressBook-Level3` project by https://se-education.org[SE-EDU initiative].
 * Some parts of this sample application were inspired by the excellent http://code.makery.ch/library/javafx-8-tutorial/[Java FX tutorial] by
 _Marco Jakob_.
-* Libraries used: https://openjfx.io/[JavaFX], https://github.com/FasterXML/jackson[Jackson], https://github.com/junit-team/junit5[JUnit5]
+* Libraries used: https://openjfx.io/[JavaFX], https://github.com/FasterXML/jackson[Jackson], https://github.com/junit-team/junit5[JUnit5], https://github.com/itext/itext7[iText7]
 
 
 == Licence : link:LICENSE[MIT]
